# example-rust

./: README.md
alvarium_demo_pub/: .gitignore  Cargo.toml
alvarium_demo_pub/config/: config.json
alvarium_demo_pub/config/keys/: private.key  public.key
alvarium_demo_pub/src/: custom_annotator.rs  errors.rs  http.rs  main.rs  mock_sensor.rs
alvarium_demo_sub/: .gitignore  Cargo.toml  package-lock.json  package.json
alvarium_demo_sub/src/: logger.rs  main.rs
alvarium_demo_sub/static/: script.js  styles.css
alvarium_demo_sub/templates/: index.html.tera
