[package]
name = "alvarium_demo_sub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
serde = "1.0.164"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"

streams = { git = "https://github.com/demia-protocol/streams", branch = "develop", default-features = false, features = ["utangle-client", "did"] }
alvarium-annotator = { git = "https://github.com/project-alvarium/alvarium-annotator" }
alvarium-sdk-rust = { git = "https://github.com/project-alvarium/alvarium-sdk-rust" }

rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
base64 = "0.21.2"
chrono = { version = "0.4.31", features = ["serde"] }
sled = "0.34.7"
hex = "0.4.3"

log = "0.4.19"
fern = "0.6.2"
thiserror = "1.0.40"